--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashita - Data Analyst & AI Engineer</title>
+    <link rel="stylesheet" href="">
     <meta name="description" content="Portfolio of Ashita, a passionate Data Analyst and AI Engineer specializing in machine learning, data analytics, and digital transformation solutions." />
     <meta name="author" content="Ashita" />
     <meta name="keywords" content="Data Analyst, AI Engineer, Machine Learning, Python, SQL, Power BI, Data Science" />
